--- a/Packlists/ItemsView.xaml
+++ b/Packlists/ItemsView.xaml
@@ -10,7 +10,7 @@
         md:DialogServiceViews.IsRegistered="True"
         mc:Ignorable="d"
         Title="ItemsWithQtiesView" MinHeight="450" MinWidth="800"
-        SizeToContent="WidthAndHeight"
+        SizeToContent="Width"
         DataContext="{Binding Items, Source={StaticResource Locator}}">
     
     <Grid>
