--- a/Packlists/COCsView.xaml
+++ b/Packlists/COCsView.xaml
@@ -1,21 +1,17 @@
 ﻿<Window x:Class="Packlists.COCsView"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Packlists"
         xmlns:dependencyProperties="clr-namespace:Packlists.DependencyProperties"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:converters="clr-namespace:Packlists.Converters"
-        xmlns:command="http://www.galasoft.ch/mvvmlight"
         mc:Ignorable="d"
         xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
         md:DialogServiceViews.IsRegistered="True"
-        Title="ImportView" 
-        xmlns:properties="clr-namespace:Packlists.Properties"
         Height="550"
-        Width="300"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        Title="COCs"
+        SizeToContent="Width"
         DataContext="{Binding COCs, Source={StaticResource Locator}}">
 
     <!--<i:Interaction.Triggers>
