--- a/Packlists/ImportView.xaml
+++ b/Packlists/ImportView.xaml
@@ -11,7 +11,7 @@
         mc:Ignorable="d"
         xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
         md:DialogServiceViews.IsRegistered="True"
-        Title="ImportView" 
+        Title="Imports" 
         xmlns:properties="clr-namespace:Packlists.Properties"
         WindowStartupLocation="Manual"
         Left="{Binding Source={x:Static properties:Settings.Default}, Path=ImportLeft, Mode=TwoWay}"
