--- a/Packlists/MainWindow.xaml
+++ b/Packlists/MainWindow.xaml
@@ -48,20 +48,33 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="250"/>
-                    <RowDefinition/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="45"/>
+                    <RowDefinition Height="10"/>
                     <RowDefinition Height="60"/>
                 </Grid.RowDefinitions>
 
                 <Menu Grid.Column="0"
                       Grid.Row="0"
                       Grid.ColumnSpan="6">
-                    <MenuItem Header="Items" Command="{Binding OpenItemsPanelCommand}"/>
-                    <MenuItem Header="Materials" Command="{Binding OpenMaterialsPanelCommand}"/>
-                    <MenuItem Header="Import" Command="{Binding OpenImportPanelCommand}"/>
-                    <MenuItem Header="Monthly usage" Command="{Binding OpenReportPanelCommand}"/>
-                    <MenuItem Header="COCs" Command="{Binding OpenCocsPanelCommand}"/>
+                    <MenuItem Header="Window">
+                        <MenuItem Header="Items" Command="{Binding OpenItemsPanelCommand}"/>
+                        <MenuItem Header="Materials" Command="{Binding OpenMaterialsPanelCommand}"/>
+                        <MenuItem Header="Import" Command="{Binding OpenImportPanelCommand}"/>
+                        <MenuItem Header="Monthly usage" Command="{Binding OpenReportPanelCommand}"/>
+                        <MenuItem Header="COCs" Command="{Binding OpenCocsPanelCommand}"/>
+                    </MenuItem>
+                    <MenuItem Header="Print">
+                        <MenuItem Header="Print packliste" Command="{Binding PrintPacklisteCommand}"/>
+                        <MenuItem Header="Print item table" Command="{Binding PrintItemTableCommand}"/>
+                        <Separator/>
+                        <MenuItem Header="Print monthly report" Command="{Binding PrintMonthlyCommand}"/>
+                    </MenuItem>
+                    <MenuItem Header="Create packliste">
+                        <MenuItem Header="Import packliste" Command="{Binding ImportPacklisteCommand}"/>
+                        <MenuItem Header="Packliste for Tarm" Command="{Binding CreateTarmPacklisteCommand}"/>
+                        <MenuItem Header="Packliste from COCs" Command="{Binding PacklisteFromCOCsCommand}"/>
+                    </MenuItem>
+                    
                 </Menu>
 
                 <DataGrid Grid.Column="0"
@@ -73,6 +86,12 @@
                           AutoGenerateColumns="False"
                           CanUserAddRows="True"
                           Margin="5 5 0 5">
+
+                    <DataGrid.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Recalculate usage" Command="{Binding RecalculateUsageCommand}"/>
+                        </ContextMenu>
+                    </DataGrid.ContextMenu>
 
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Packlists" 
@@ -88,15 +107,10 @@
 
                 <Button Grid.Row="5"
                         Grid.Column="0"
+                        Grid.ColumnSpan="2"
                         Margin="5"
-                        Command="{Binding PrintPacklisteCommand}"
-                        Content="Print packliste"/>
-                
-                <Button Grid.Row="5"
-                        Grid.Column="1"
-                        Margin="5"
-                        Command="{Binding PrintItemTableCommand}"
-                        Content="Print item table"/>
+                        Command="{Binding SaveCommand}"
+                        Content="Save changes"/>
 
                 <DatePicker dp:DatePickerCalendar.IsMonthYear="True"
                             dp:DatePickerDateFormat.DateFormat="yyyy-MM"
@@ -201,47 +215,16 @@
 
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Width="140" DisplayMemberBinding="{Binding Item1}" Header="Material"/>
-                            <GridViewColumn Width="75" DisplayMemberBinding="{Binding Item2, StringFormat={}{0:N2}}" Header="Usage"/>
-                            <GridViewColumn Width="35" DisplayMemberBinding="{Binding Item3}" Header="Unit"/>
+                            <GridViewColumn Width="140" DisplayMemberBinding="{Binding Material}" Header="Material"/>
+                            <GridViewColumn Width="75" DisplayMemberBinding="{Binding Amount, StringFormat={}{0:N2}}" Header="Usage"/>
+                            <GridViewColumn Width="35" DisplayMemberBinding="{Binding Material.Unit}" Header="Unit"/>
                         </GridView>
                     </ListView.View>
                      
                     </ListView>
                     
                 </GroupBox>
-              
-                <StackPanel Grid.Row="6"
-                            Grid.Column="0"
-                            Orientation="Horizontal"
-                            Grid.ColumnSpan="6">
-
-                    <Button Command="{Binding SaveCommand}"
-                            Content="Save"
-                            Margin="5" 
-                            Padding="10 0"/>
-
-                    <Button Command="{Binding PrintMonthlyCommand}"
-                            Content="Print monthly report"
-                            Margin="5" 
-                            Padding="10 0"/>
-
-                    <Button Command="{Binding ImportPacklisteCommand}"
-                            Content="Import packliste"
-                            Margin="5"
-                            Padding="10 0"/>
-
-                    <Button Command="{Binding CreateTarmPacklisteCommand}"
-                            Content="Create packliste for tarm"
-                            Margin="5"
-                            Padding="10 0"/>
-
-                    <Button Command="{Binding PacklisteFromCOCsCommand}"
-                            Content="Packliste from COC numbers"
-                            Margin="5"
-                            Padding="10 0"/>
-                </StackPanel>
-
+                
             </Grid>
 
         </ScrollViewer>
