UI improvements in Imports Window

--- a/Packlists/ImportView.xaml
+++ b/Packlists/ImportView.xaml
@@ -160,7 +160,8 @@
                                       SelectedItem="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.SelectedMaterial}"
                                       Margin="5"
                                       MinWidth="120"
-                                      VerticalAlignment="Center"/>
+                                      VerticalAlignment="Center"
+                                      IsEditable="True"/>
                             <TextBlock Text="Amount: "
                                        Margin="5"
                                        VerticalAlignment="Center"/>
