--- a/Packlists/ImportView.xaml
+++ b/Packlists/ImportView.xaml
@@ -160,8 +160,7 @@
                                       SelectedItem="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.SelectedMaterial}"
                                       Margin="5"
                                       MinWidth="120"
-                                      VerticalAlignment="Center"
-                                      IsEditable="True"/>
+                                      VerticalAlignment="Center"/>
                             <TextBlock Text="Amount: "
                                        Margin="5"
                                        VerticalAlignment="Center"/>
