--- a/Packlists/ItemsView.xaml
+++ b/Packlists/ItemsView.xaml
@@ -1,128 +1,139 @@
-﻿<Window x:Class="Packlists.ItemsView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ignore="http://www.galasoft.ch/ignore"
-        xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        xmlns:command="http://www.galasoft.ch/mvvmlight"
-        md:DialogServiceViews.IsRegistered="True"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        mc:Ignorable="d"
-        xmlns:properties="clr-namespace:Packlists.Properties"
-        WindowStartupLocation="Manual"
-        Left="{Binding Source={x:Static properties:Settings.Default}, Path=ItemLeft, Mode=TwoWay}"
-        Top="{Binding Source={x:Static properties:Settings.Default}, Path=ItemTop, Mode=TwoWay}"
-        Height="{Binding Source={x:Static properties:Settings.Default}, Path=ItemHeight, Mode=TwoWay}"
-        Width="{Binding Source={x:Static properties:Settings.Default}, Path=ItemWidth, Mode=TwoWay}"
-        Title="Items" MinHeight="450" MinWidth="600"
-        DataContext="{Binding Items, Source={StaticResource Locator}}">
-    
+﻿<Window
+    x:Class="Packlists.ItemsView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:command="http://www.galasoft.ch/mvvmlight"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:ignore="http://www.galasoft.ch/ignore"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
+    xmlns:properties="clr-namespace:Packlists.Properties"
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+    Title="Items"
+    Width="{Binding Source={x:Static properties:Settings.Default}, Path=ItemWidth, Mode=TwoWay}"
+    Height="{Binding Source={x:Static properties:Settings.Default}, Path=ItemHeight, Mode=TwoWay}"
+    MinWidth="600"
+    MinHeight="450"
+    md:DialogServiceViews.IsRegistered="True"
+    DataContext="{Binding Items, Source={StaticResource Locator}}"
+    Left="{Binding Source={x:Static properties:Settings.Default}, Path=ItemLeft, Mode=TwoWay}"
+    Top="{Binding Source={x:Static properties:Settings.Default}, Path=ItemTop, Mode=TwoWay}"
+    WindowStartupLocation="Manual"
+    mc:Ignorable="d">
+
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="130"/>
-            <ColumnDefinition Width="75"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="130" />
+            <ColumnDefinition Width="75" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="45"/>
+            <RowDefinition Height="45" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="45" />
         </Grid.RowDefinitions>
-        
-        <xctk:AutoSelectTextBox Margin="5"
-                                Grid.Column="0"
-                                Grid.Row="0"
-                                VerticalAlignment="Center"
-                                Text="{Binding SearchFilter, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
-                                Grid.ColumnSpan="2"
-                                Padding="0 5"
-                                AutoSelectBehavior="OnFocus"/>
-        
-        <DataGrid ItemsSource="{Binding ItemsView}"
-                  Grid.Row="1"
-                  Grid.Column="0"
-                  Grid.ColumnSpan="2"
-                  Margin="5"
-                  SelectedItem="{Binding SelectedItem}"
-                  AutoGenerateColumns="False"
-                  CanUserAddRows="False">
+
+        <xctk:AutoSelectTextBox
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="5"
+            Padding="0,5"
+            VerticalAlignment="Center"
+            AutoSelectBehavior="OnFocus"
+            Text="{Binding SearchFilter, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" />
+
+        <DataGrid
+            Grid.Row="1"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="5"
+            AutoGenerateColumns="False"
+            CanUserAddRows="False"
+            ItemsSource="{Binding ItemsView}"
+            SelectedItem="{Binding SelectedItem}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Item"
-                                    Binding="{Binding ItemName}"
-                                    Width="*"/>
+                <DataGridTextColumn
+                    Width="*"
+                    Binding="{Binding ItemName}"
+                    Header="Item" />
             </DataGrid.Columns>
         </DataGrid>
-        
-        <TextBox Text="{Binding NewItemName}"
-                 Grid.Column="0"
-                 Grid.Row="2"
-                 Margin="5"
-                 VerticalAlignment="Center"
-                 Padding="0 5"/>
-        
-        <Button Content="Add"
-                Grid.Column="1"
-                Grid.Row="2"
-                Command="{Binding AddNewItemCommand}"
-                Margin="0 5"/>
-        
-        <ListView ItemsSource="{Binding SelectedItem.Materials}"
-                  Grid.Column="2"
-                  Grid.Row="1"
-                  Margin="5"
-                  SelectedItem="{Binding SelectedMaterial}">
-            
+
+        <TextBox
+            Grid.Row="2"
+            Grid.Column="0"
+            Margin="5"
+            Padding="0,5"
+            VerticalAlignment="Center"
+            Text="{Binding NewItemName}" />
+
+        <Button
+            Grid.Row="2"
+            Grid.Column="1"
+            Margin="0,5"
+            Command="{Binding AddNewItemCommand}"
+            Content="Add" />
+
+        <ListView
+            Grid.Row="1"
+            Grid.Column="2"
+            Margin="5"
+            ItemsSource="{Binding SelectedItem.Materials}"
+            SelectedItem="{Binding SelectedMaterial}">
+
             <ListView.InputBindings>
                 <KeyBinding Key="Delete" Command="{Binding RemoveMaterialCommand}" />
-                <KeyBinding Key="OemPlus" Command="{Binding AddMaterialCommand}"/>
+                <KeyBinding Key="OemPlus" Command="{Binding AddMaterialCommand}" />
             </ListView.InputBindings>
 
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
-                    <Setter Property="IsSelected" Value="{Binding SelectedMaterial.IsSelected}"/>
+                    <Setter Property="IsSelected" Value="{Binding SelectedMaterial.IsSelected}" />
                 </Style>
             </ListView.ItemContainerStyle>
-            
+
             <ListView.ItemTemplate>
                 <DataTemplate>
 
                     <StackPanel>
-                        <TextBlock Text="Material: "/>
-                        <ComboBox ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.MaterialsView}"
-                                  SelectedItem="{Binding Material}"
-                                  IsTextSearchEnabled="True"
-                                  IsEditable="True"/>
-                        <TextBlock Text="Usage: "/>
+                        <TextBlock Text="Material: " />
+                        <ComboBox
+                            IsEditable="True"
+                            IsTextSearchEnabled="True"
+                            ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.MaterialsView}"
+                            SelectedItem="{Binding Material}" />
+                        <TextBlock Text="Usage: " />
                         <StackPanel Orientation="Horizontal">
-                            <xctk:AutoSelectTextBox Text="{Binding Amount}"
-                                                    MinWidth="25" 
-                                                    BorderThickness="1 1 0 1"
-                                                    x:Name="Usage"
-                                                    AutoSelectBehavior="OnFocus"/>
-                            <Border BorderThickness="0 1 1 1"
-                                    BorderBrush="DarkGray"
-                                    Padding="4 0 4 0"
-                                    Background="LightGray">
+                            <xctk:AutoSelectTextBox
+                                x:Name="Usage"
+                                MinWidth="25"
+                                AutoSelectBehavior="OnFocus"
+                                BorderThickness="1,1,0,1"
+                                Text="{Binding Amount}" />
+                            <Border
+                                Padding="4,0,4,0"
+                                Background="LightGray"
+                                BorderBrush="DarkGray"
+                                BorderThickness="0,1,1,1">
                                 <TextBlock Text="{Binding Material.Unit}" />
                             </Border>
                         </StackPanel>
                     </StackPanel>
-                    
+
                 </DataTemplate>
             </ListView.ItemTemplate>
 
             <ListView.Style>
-                <Style TargetType="ListView"
-                       BasedOn="{StaticResource {x:Type ListBox}}">
+                <Style BasedOn="{StaticResource {x:Type ListBox}}" TargetType="ListView">
                     <Style.Triggers>
-                        <!-- Use ListBox.HasItems instead of Binding -->
+                        <!--  Use ListBox.HasItems instead of Binding  -->
                         <Trigger Property="HasItems" Value="False">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate>
-                                        <TextBox Text="No material yet, add material using the button below."/>
+                                        <TextBox Text="No material yet, add material using the button below." />
                                     </ControlTemplate>
                                 </Setter.Value>
                             </Setter>
@@ -132,27 +143,31 @@
             </ListView.Style>
         </ListView>
 
-        <StackPanel Grid.Column="2"
-                    Grid.Row="2"
-                    Orientation="Horizontal">
+        <StackPanel
+            Grid.Row="2"
+            Grid.Column="2"
+            Orientation="Horizontal">
 
-            <Button Width="120"
-                    Margin="0 5"
-                    Content="Add material"
-                    Command="{Binding AddMaterialCommand}" />
+            <Button
+                Width="120"
+                Margin="0,5"
+                Command="{Binding AddMaterialCommand}"
+                Content="Add material" />
 
-            <Button Width="120"
-                    Margin="0 5"
-                    Content="Save"
-                    Command="{Binding SaveCommand}" />
-            
-            <Button Width="120"
-                    Margin="0 5"
-                    Content="Import items"
-                    Command="{Binding ImportItemsCommand}" />
-            
+            <Button
+                Width="120"
+                Margin="0,5"
+                Command="{Binding SaveCommand}"
+                Content="Save" />
+
+            <Button
+                Width="120"
+                Margin="0,5"
+                Command="{Binding ImportItemsCommand}"
+                Content="Import items" />
+
         </StackPanel>
-        
+
 
     </Grid>
 </Window>
