--- a/Packlists/MonthlyUsageView.xaml
+++ b/Packlists/MonthlyUsageView.xaml
@@ -1,31 +1,64 @@
-﻿<Window x:Class="Packlists.MonthlyUsageView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ignore="http://www.galasoft.ch/ignore"
-        xmlns:collections="clr-namespace:System.Collections;assembly=mscorlib"
-        xmlns:converters="clr-namespace:Packlists.Converters"
-        mc:Ignorable="d"
-        Title="Monthly reports" Height="450" Width="800"
-        DataContext="{Binding MonthlyReport, Source={StaticResource Locator}}">
-    
+﻿<Window
+    x:Class="Packlists.MonthlyUsageView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:collections="clr-namespace:System.Collections;assembly=mscorlib"
+    xmlns:converters="clr-namespace:Packlists.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dataGrid2D="http://gu.se/DataGrid2D"
+    xmlns:dp="clr-namespace:Packlists.DependencyProperties"
+    xmlns:ignore="http://www.galasoft.ch/ignore"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Monthly reports"
+    Width="800"
+    Height="450"
+    DataContext="{Binding MonthlyReport, Source={StaticResource Locator}}"
+    mc:Ignorable="d">
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        <DockPanel LastChildFill="True">
+            <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
+                <DatePicker
+                    Margin="10,5"
+                    Padding="10"
+                    HorizontalAlignment="Right"
+                    dp:DatePickerCalendar.IsMonthYear="True"
+                    dp:DatePickerDateFormat.DateFormat="yyyy-MM"
+                    SelectedDate="{Binding Month}" />
+                <Button
+                    Margin="10,5"
+                    Padding="10"
+                    Command="{Binding Generate}"
+                    Content="Generate Report" />
+                <Button
+                    Margin="10,5"
+                    Padding="10"
+                    Content="Print"
+                    DockPanel.Dock="Right" />
+                <Button
+                    Margin="10,5"
+                    Padding="10"
+                    Command="{Binding ExportToExcel}"
+                    Content="Export to Excel"
+                    DockPanel.Dock="Right" />
+            </DockPanel>
+            <DataGrid
+                MaxWidth="2500"
+                MaxHeight="1500"
+                dataGrid2D:ItemsSource.Array2D="{Binding Report}"
+                dataGrid2D:ItemsSource.ColumnHeadersSource="{Binding ColumnHeaders}"
+                dataGrid2D:ItemsSource.RowHeadersSource="{Binding RowHeaders}"
+                AutoGenerateColumns="True"
+                CanUserSortColumns="False"
+                EnableColumnVirtualization="True"
+                EnableRowVirtualization="True"
+                IsReadOnly="True"
+                SelectionMode="Single"
+                SelectionUnit="Cell" />
+        </DockPanel>
 
-
-
-        <DataGrid ItemsSource="{Binding Report, IsAsync=True}"
-                  AutoGenerateColumns="True"
-                  AutoGeneratingColumn="Dg_OnAutoGeneratingColumn"
-                  IsReadOnly="True"
-                  EnableColumnVirtualization="True"
-                  EnableRowVirtualization="True"
-                  VirtualizingStackPanel.IsVirtualizing="True"
-                  VirtualizingStackPanel.VirtualizationMode="Recycling"
-                  MaxWidth="2500"
-                  MaxHeight="1500"/>
     </Grid>
 </Window>
