--- a/Packlists.WebUi/Pages/FetchData.razor
+++ b/Packlists.WebUi/Pages/FetchData.razor
@@ -1,71 +1,99 @@
-﻿@page "/cocs"
+﻿@page "/packinglists"
 @using Packilists.Shared.Data
 @inject HttpClient Http
 
-<h1>Weather forecast</h1>
+<h1>Packing lists</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
-
-@if (_cocs == null)
+@if (_packingLists == null)
 {
     <p><em>Loading...</em></p>
 }
 else
 {
-    <MatTable Class="mat-elevation-z5" Items="@_cocs" LoadInitialData="true" Striped="true" FilterByColumnName="CocNumber" DebounceMilliseconds="15" PageSize="50">
+    <MatDatePicker Label="Data packing listy" EnableWeekNumbers="true" @oninput="@OnDateChanged"></MatDatePicker>
+    <MatTable Class="mat-elevation-z5" Items="@_packingLists" LoadInitialData="true" Striped="true" DebounceMilliseconds="450" PageSize="25">
         <MatTableHeader>
-            <th>COC Number</th>
-            <th>Inventory date</th>
-            <th>Item name</th>
-            <th>Quantity</th>
+            <th>Number</th>
+            <th>Date</th>
+            <th style="min-width: 20%">Destination</th>
+            <th>Comment</th>
+            <th></th>
         </MatTableHeader>
-        <MatTableRow Context="CocRow">
-            <td>@CocRow.CocNumber</td>
-            <td>@CocRow.InventoryDate.ToShortDateString()</td>
-            <td>@CocRow.ItemName</td>
-            <td>@CocRow.Quantity</td>
+        <MatTableRow Context="PackingListRow">
+            <td>@PackingListRow.PacklisteNumber</td>
+            <td>@PackingListRow.PacklisteDate.ToString("yyyy-MM-dd")</td>
+            <td>@PackingListRow.Destination</td>
+            <td class="text-danger">@GetRowComment(PackingListRow)</td>
+            <td>
+                <a class="text-info" href="/packinglistdetails/@PackingListRow.PacklisteId"><MatIcon Icon="@MatIconNames.Remove_red_eye"></MatIcon></a>
+                <a class="text-danger" href="/packinglistdetails/@PackingListRow.PacklisteId"><MatIcon Icon="@MatIconNames.Remove_circle_outline"></MatIcon></a>
+            </td>
         </MatTableRow>
     </MatTable>
 
-    @*<table class="table">
-        <thead>
-            <tr>
-                <th>COC Number</th>
-                <th>Inventory date</th>
-                <th>Item name</th>
-                <th>Quantity</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var coc in _cocs)
-            {
-                <tr>
-                    <td>@coc.CocNumber</td>
-                    <td>@coc.InventoryDate</td>
-                    <td>@coc.ItemName</td>
-                    <td>@coc.Quantity</td>
-                </tr>
-            }
-        </tbody>
-    </table>*@
+    <p class="text-info">
+        <details>
+            Legend: <br />
+            <span class="text-danger">NI</span> - Packing list does not contain any items.<br />
+            <span class="text-danger">NR</span> - Packing list does not have raw material usage.<br />
+            <span class="text-danger">NM</span> - At least one of the items on packing list does not have it's material usage.
+        </details>
+    </p>
 }
 
 @code {
-    COC[] _cocs;
+    Packliste[] _packingLists;
+    string _test;
+    string _test1;
+    string _test2;
 
     protected override async Task OnInitializedAsync()
     {
-        _cocs = await Http.GetJsonAsync<COC[]>("api/cocs");
+        _packingLists = await Http.GetJsonAsync<Packliste[]>($"api/PackingLists/ByDate/{DateTime.Now.ToString("yyyy-MM-dd")}");
     }
 
-    public class WeatherForecast
+    private async Task OnDateChanged(ChangeEventArgs e)
     {
-        public DateTime Date { get; set; }
+        _test = e.Value.ToString();
+        var test = DateTime.TryParse(e.Value.ToString(), out var date);
+        _test1 = test.ToString();
+        _test2 = date.ToString();
+        if (test)
+        {
+            _packingLists = await Http.GetJsonAsync<Packliste[]>($"api/PackingLists/ByDate/{date.ToString("yyyy-MM-dd")}");
+        }
+    }
 
-        public int TemperatureC { get; set; }
+    private string GetRowComment(Packliste packingList)
+    {
+        var sb = "";
 
-        public string Summary { get; set; }
+        if (packingList.ItemsWithQties == null || packingList.ItemsWithQties.Count == 0)
+        {
+            sb += $"NI |";
+        }
+        if (packingList.RawUsage == null || packingList.RawUsage.Count == 0)
+        {
+            sb += $" NR |";
+        }
 
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        var test = packingList.ItemsWithQties.Where(i => i.Item.Materials == null || i.Item.Materials.Count == 0);
+
+        if (test.Count() != 0)
+        {
+            sb += " NM";
+        }
+
+        if (sb.EndsWith("|"))
+        {
+            sb = sb.Substring(0, sb.Length -1);
+            sb = sb.Trim();
+        }
+        else
+        {
+            sb = sb.Trim();
+        }
+
+        return sb;
     }
 }
