--- a/Packlists.WebUi/Shared/NavMenu.razor
+++ b/Packlists.WebUi/Shared/NavMenu.razor
@@ -18,8 +18,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="cocs">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> COCs
+            <NavLink class="nav-link" href="packinglists">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Packing lists
             </NavLink>
         </li>
     </ul>
