--- a/PacklistsWebUI/Pages/DataGridFeatures.razor
+++ b/PacklistsWebUI/Pages/DataGridFeatures.razor
@@ -91,8 +91,8 @@
             </GridTemplates>
             <GridColumns>
                 <GridColumn Field="@nameof(Packliste.PacklisteId)" IsPrimaryKey="true" Visible="false"></GridColumn>
-                <GridColumn Field=@nameof(Packliste.PacklisteNumber) IsPrimaryKey="false" HeaderText="Number" Width="50" AutoFit="false"></GridColumn>
-                <GridColumn Field=@nameof(Packliste.PacklisteDate) HeaderText="Date" EditType="EditType.DatePickerEdit" Format="d" TextAlign="TextAlign.Right" Type="ColumnType.Date" Width="60" AutoFit="false"></GridColumn>
+                <GridColumn Field=@nameof(Packliste.PacklisteNumber) IsPrimaryKey="false" HeaderText="Number" EditType="EditType.DefaultEdit" Width="80"></GridColumn>
+                <GridColumn Field=@nameof(Packliste.PacklisteDate) HeaderText="Date" EditType="EditType.DatePickerEdit" Format="d" TextAlign="TextAlign.Right" Type="ColumnType.Date" Width="70"></GridColumn>
                 <GridColumn Field=@nameof(Packliste.Destination) HeaderText="Destination" Format="d" TextAlign="TextAlign.Left" AutoFit="false"></GridColumn>
             </GridColumns>
         </SfGrid>
