--- a/PacklistsWebUI/Pages/Index.razor
+++ b/PacklistsWebUI/Pages/Index.razor
@@ -1,83 +1,89 @@
 @page "/"
 
+@using Microsoft.Extensions.Configuration
+
+@inject IConfiguration _config
+
+<p>@(_config.GetValue<string>("SyncfusionLicense"))</p>
+
 <span class="pageheader">Selected Controls</span>
 <br />
 <p class="pagecontent">The following Syncfusion Blazor components can be set up in an application for you with the Syncfusion Blazor Template Studio. A fast, easy start with Syncfusion components lets you concentrate on the important part: learning.</p>
 <div class="controlregion">
 
- <h5 class="productheader"> Grids</h5>
-<ul class="ulstyle">
-	<li class="list">
- 	<NavLink class="nav-link" href="datagridfeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-datagrid" aria-hidden="true"></span>DataGrid
- 	</NavLink>
- 	</li>
+    <h5 class="productheader"> Grids</h5>
+    <ul class="ulstyle">
+        <li class="list">
+            <NavLink class="nav-link" href="datagridfeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-datagrid" aria-hidden="true"></span>DataGrid
+            </NavLink>
+        </li>
 
-</ul>
- <h5 class="productheader"> Data Visualization</h5>
-<ul class="ulstyle">
-	<li class="list">
- 	<NavLink class="nav-link" href="progressbarfeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-progressbar" aria-hidden="true"></span>ProgressBar
- 	</NavLink>
- 	</li>
+    </ul>
+    <h5 class="productheader"> Data Visualization</h5>
+    <ul class="ulstyle">
+        <li class="list">
+            <NavLink class="nav-link" href="progressbarfeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-progressbar" aria-hidden="true"></span>ProgressBar
+            </NavLink>
+        </li>
 
-</ul>
- <h5 class="productheader"> Calendar</h5>
-<ul class="ulstyle">
-	<li class="list">
- 	<NavLink class="nav-link" href="datepickerfeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-datepicker" aria-hidden="true"></span>DatePicker
- 	</NavLink>
- 	</li>
+    </ul>
+    <h5 class="productheader"> Calendar</h5>
+    <ul class="ulstyle">
+        <li class="list">
+            <NavLink class="nav-link" href="datepickerfeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-datepicker" aria-hidden="true"></span>DatePicker
+            </NavLink>
+        </li>
 
-</ul>
- <h5 class="productheader"> Layout</h5>
-<ul class="ulstyle">
-	<li class="list">
- 	<NavLink class="nav-link" href="dialogfeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-dialog" aria-hidden="true"></span>Dialog
- 	</NavLink>
- 	</li>
-	<li class="list">
- 	<NavLink class="nav-link" href="listviewfeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-listview" aria-hidden="true"></span>ListView
- 	</NavLink>
- 	</li>
+    </ul>
+    <h5 class="productheader"> Layout</h5>
+    <ul class="ulstyle">
+        <li class="list">
+            <NavLink class="nav-link" href="dialogfeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-dialog" aria-hidden="true"></span>Dialog
+            </NavLink>
+        </li>
+        <li class="list">
+            <NavLink class="nav-link" href="listviewfeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-listview" aria-hidden="true"></span>ListView
+            </NavLink>
+        </li>
 
-</ul>
- <h5 class="productheader"> Inputs</h5>
-<ul class="ulstyle">
-	<li class="list">
- 	<NavLink class="nav-link" href="numerictextboxfeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-numerictextbox" aria-hidden="true"></span>Numeric TextBox
- 	</NavLink>
- 	</li>
-	<li class="list">
- 	<NavLink class="nav-link" href="fileuploadfeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-fileupload" aria-hidden="true"></span>File Upload
- 	</NavLink>
- 	</li>
+    </ul>
+    <h5 class="productheader"> Inputs</h5>
+    <ul class="ulstyle">
+        <li class="list">
+            <NavLink class="nav-link" href="numerictextboxfeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-numerictextbox" aria-hidden="true"></span>Numeric TextBox
+            </NavLink>
+        </li>
+        <li class="list">
+            <NavLink class="nav-link" href="fileuploadfeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-fileupload" aria-hidden="true"></span>File Upload
+            </NavLink>
+        </li>
 
-</ul>
- <h5 class="productheader"> Buttons</h5>
-<ul class="ulstyle">
-	<li class="list">
- 	<NavLink class="nav-link" href="buttonfeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-button" aria-hidden="true"></span>Button
- 	</NavLink>
- 	</li>
+    </ul>
+    <h5 class="productheader"> Buttons</h5>
+    <ul class="ulstyle">
+        <li class="list">
+            <NavLink class="nav-link" href="buttonfeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-button" aria-hidden="true"></span>Button
+            </NavLink>
+        </li>
 
-</ul>
- <h5 class="productheader"> File Format Frameworks</h5>
-<ul class="ulstyle">
-	<li class="list">
- 	<NavLink class="nav-link" href="pdffeatures">
- 	<span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-pdf" aria-hidden="true"></span>PDF
- 	</NavLink>
- 	</li>
+    </ul>
+    <h5 class="productheader"> File Format Frameworks</h5>
+    <ul class="ulstyle">
+        <li class="list">
+            <NavLink class="nav-link" href="pdffeatures">
+                <span class="syncfusion-blazor-index-icons syncfusion-blazor-icon-pdf" aria-hidden="true"></span>PDF
+            </NavLink>
+        </li>
 
-</ul>
+    </ul>
 
 </div>
 <style>
@@ -95,13 +101,13 @@
 
     .pagecontent {
         font-family: sans-serif !important;
-font-size: 16px;
-color: #333333;
-letter-spacing: 0.34px;
-line-height: 24px;
-margin-top: 10px;
+        font-size: 16px;
+        color: #333333;
+        letter-spacing: 0.34px;
+        line-height: 24px;
+        margin-top: 10px;
     }
-    
+
 
     .list {
         float: left;
@@ -127,13 +133,13 @@ margin-top: 10px;
         font-family: sans-serif !important;
         font-size: 19px !important;
         color: #333333 !important;
-        letter-spacing: 0.41px ;
+        letter-spacing: 0.41px;
     }
 
     .pageheader {
         font-family: sans-serif !important;
         font-size: 24px !important;
-        color: #333333 ;
+        color: #333333;
         font-weight: bold !important;
     }
 </style>
